CID-2086: Add logs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 vsm.repos.not_found=Zero repositories found in {0} GitHub organisation. Hint: In case organisation is valid, check if the inclusion list has at least one valid repository name.
 vsm.repos.total=Fetched Org Repositories Ids. Result : {0} repos
 vsm.repos.imported=Repository Imported
+vsm.repos.started=Started fetching repositories for organization: {0}
+vsm.repos.finished=Finished fetching repositories for organization: {0}
+vsm.repos.page=Fetching repositories page: {0}
+vsm.dora.success=DORA generated successfully for repository {0}
